Gerenciador de boards de tarefas em Java com mysql e interface gráfica JavaFX, com funcionalidade de drag and drop para mover os cards de uma coluna para outra.